# Couchcast

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/couchcast/: Cargo.toml
crates/couchcast-config/: Cargo.toml
crates/couchcast-config/src/: lib.rs  mapping.rs
crates/couchcast-input/: Cargo.toml
crates/couchcast-input/src/: lib.rs
crates/couchcast-media/: Cargo.toml
crates/couchcast-media/src/: device.rs  error.rs  frame.rs  lib.rs  pipeline.rs
crates/couchcast-transport/: Cargo.toml
crates/couchcast-transport/src/: capabilities.rs  event.rs  lib.rs  transport.rs
crates/couchcast-transport/src/backends/: adb.rs  bluetooth.rs  cec.rs  log.rs  mod.rs  roku.rs
crates/couchcast/src/: app.rs  debug.rs  hud.rs  main.rs  menu.rs  render.rs  worker.rs
data/: io.github.gehhilfe.Couchcast.desktop  io.github.gehhilfe.Couchcast.metainfo.xml
docs/: ARCHITECTURE.md  PACKAGING.md  ROADMAP.md
flatpak/: io.github.gehhilfe.Couchcast.yml
shaders/: video.frag  video.vert
src/: app.cpp  app.hpp  log.cpp  log.hpp  main.cpp  worker.cpp  worker.hpp
src/config/: config.cpp  config.hpp  mapping.cpp  mapping.hpp
src/input/: input.cpp  input.hpp
src/media/: device.cpp  device.hpp  frame.cpp  frame.hpp  pipeline.cpp  pipeline.hpp
src/render/: renderer.cpp  renderer.hpp
src/transport/: capabilities.cpp  capabilities.hpp  event.cpp  event.hpp  process.cpp  process.hpp  transport.hpp
src/transport/backends/: adb.cpp  adb.hpp  log_transport.cpp  log_transport.hpp
src/ui/: debug_overlay.cpp  debug_overlay.hpp  menu.cpp  menu.hpp
tests/: tests.cpp
xtask/: Cargo.toml
xtask/src/: main.rs
