[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["The Couchcast Authors"]
repository = "https://github.com/gehhilfe/Couchcast"
homepage = "https://github.com/gehhilfe/Couchcast"
description = "Play live video/audio from an HDMI capture device fullscreen on Linux and forward controller input back to the device. Built for SteamOS Gaming Mode."
keywords = ["v4l2", "capture", "steamos", "flatpak", "gstreamer"]
categories = ["multimedia", "hardware-support"]

# Shared dependency versions. Individual crates opt in with `dep.workspace = true`.
# Versions are resolved to what is currently published and mutually compatible;
# see docs/ARCHITECTURE.md for the reasoning behind the stack.
[workspace.dependencies]
# Internal crates
couchcast-config = { path = "crates/couchcast-config", version = "0.1.0" }
couchcast-input = { path = "crates/couchcast-input", version = "0.1.0" }
couchcast-media = { path = "crates/couchcast-media", version = "0.1.0" }
couchcast-transport = { path = "crates/couchcast-transport", version = "0.1.0" }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"

# Async runtime (transport worker thread)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
async-trait = "0.1"

[profile.release]
# Low-latency media app: keep the binary tight and optimized.
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
