[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Developer tasks for Couchcast (Flatpak build/lint, cargo-sources generation, local CI). Run via `cargo xtask <command>`."
publish = false

[dependencies]
anyhow.workspace = true
