[package]
name = "couchcast-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Controller/keyboard input reading for Couchcast: reads the Steam Virtual Gamepad via gilrs and normalizes it to a device-agnostic event stream."

[dependencies]
couchcast-transport.workspace = true
gilrs = "0.11.2"
thiserror.workspace = true
tracing.workspace = true
