[package]
name = "couchcast-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capture + display + audio for Couchcast: a single low-latency GStreamer pipeline (v4l2src video + pipewire audio) rendered zero-copy via gtk4paintablesink."

[dependencies]
gst-plugin-gtk4 = { version = "0.15.2", features = ["wayland", "dmabuf"] }
gstreamer = "0.25.3"
gstreamer-video = "0.25.3"
gtk4 = { version = "0.11.4", features = ["v4_14"] }
thiserror.workspace = true
tracing.workspace = true
