[package]
name = "couchcast-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capture + display + audio for Couchcast: a single low-latency GStreamer pipeline (v4l2src video + pipewire audio) exported as frames via appsink for a wgpu renderer."

[dependencies]
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.3"
gstreamer-allocators = "0.25.3"
smallvec = "1"
thiserror.workspace = true
tracing.workspace = true
