[package]
name = "couchcast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Couchcast — play an HDMI capture device fullscreen on Linux and forward controller input back to it. Built for SteamOS Gaming Mode."
default-run = "couchcast"

[dependencies]
couchcast-config.workspace = true
couchcast-input.workspace = true
couchcast-media.workspace = true
couchcast-transport.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# Game-native render/UI stack (replaces GTK4/libadwaita): winit owns the window
# and event loop, wgpu the GPU, egui the immediate-mode UI drawn over the live
# video texture. See docs/ARCHITECTURE.md and the plan for the rationale.
# wgpu is pinned to 29 to match egui-wgpu 0.35 (egui and the video texture must
# share one wgpu Device). The turnkey DMABUF import landed in wgpu 30; on 29 the
# zero-copy path uses the wgpu-hal `texture_from_raw` escape hatch instead.
winit = { version = "0.30", features = ["x11", "wayland"] }
wgpu = { version = "29", features = ["vulkan"] }
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false, features = ["x11", "wayland"] }
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
# naga is wgpu 29's shader compiler; used to validate the video WGSL in a unit
# test since the GPU render path can't run headlessly in CI.
naga = { version = "29", features = ["wgsl-in"] }
